<resources>
    <string name="app_name">VSU-RASP</string>
    <string name="WelcomeText">Добро Пожаловать в расписание ВГУ</string>
    <string name="FacultyHint">Введите свой факультет</string>
    <string name="GroupHint">Введите свою группу</string>
    <string name="Add_New_Shedule_TextButton">ДОБАВИТЬ НОВОЕ РАСПИСАНИЕ</string>
    <string name="NameHint">КАК ВАС ЗОВУТ?</string>
    <string name="Confirm">ПОДТВЕРДИТЬ</string>
    <string name="pair_name">НАЗВАНИЕ ПАРЫ</string>
    <string name="hall_number">НОМЕР АУДИТОРИИ</string>
    <string name="teacher_name">ИМЯ ПРЕПОДА</string>
    <string name="Back">НАЗАД</string>
    <string name="EnterShedulesName">ВВЕДИТЕ НАЗВАНИЕ РАСПИСАНИЯ</string>
    <string name="EnterLessonName">Введите название пары</string>
    <string name="EnterTeacherName">Введите имя преподавателя</string>
    <string name="EnterLessonHall">Введите аудиторию</string>
    <string name="UpdateData">ОБНОВИТЬ ДАННЫЕ</string>
    <string name="RESET">СБРОС НАСТРОЕК</string>
    <string name="CreateCustomSchedule">ДОБАВИТЬ СВОЕ РАСПИСАНИЕ</string>
    <string name="ADD">ДОБАВИТЬ</string>
    <string name="CANCEL">ОТМЕНА</string>
    <string name="day6">СУББОТА</string>
    <string name="day5">ПЯТНИЦА</string>
    <string name="day4">ЧЕТВЕРГ</string>
    <string name="day3">СРЕДА</string>
    <string name="day2">ВТОРНИК</string>
    <string name="day1">ПОНЕДЕЛЬНИК</string>
    <string name="hh_mm">hh:mm</string>

</resources>
