<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground">


    <EditText
        android:id="@+id/new_shedule_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/EnterShedulesName" />

    <Spinner
        android:id="@+id/faculty_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/new_shedule_name" />

    <Spinner
        android:id="@+id/group_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/faculty_spinner" />

    <Button
        android:id="@+id/new_shed_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Confirm"
        app:layout_constraintTop_toBottomOf="@+id/group_spinner"
        android:onClick="onClickNewSheduleButton"
        android:background="@color/primaryButtons"/>

    <Button
        android:id="@+id/new_shed_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Back"
        app:layout_constraintTop_toBottomOf="@+id/new_shed_confirm"
        android:onClick="onClickNewShedBackButton"
        android:background="@color/primaryButtons" />

</android.support.constraint.ConstraintLayout>