<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primaryButtons"
            android:textColor="@color/button_text"
            android:text="@string/UpdateData"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:onClick="onClickUpdate"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primaryButtons"
            android:textColor="@color/button_text"
            android:text="@string/RESET"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:onClick="onClickEraseCache"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primaryButtons"
            android:textColor="@color/button_text"
            android:text="@string/CreateCustomSchedule"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:onClick="onClickCustomSchedule"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/menu_recycler"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="@color/primaryBackground"/>
</android.support.v4.widget.DrawerLayout>